Handling issues making My Brand run properly
