# src/app.ts
@@ -1,5 +1,4 @@
-// src/app.ts
-import express from 'express';
+import express, { Request, Response } from 'express';
 import mongoose from 'mongoose';
 import userRoutes from './routes/userRoutes';
 import swaggerUi from 'swagger-ui-express';
@@ -7,37 +6,42 @@ import swaggerSpec from './swagger.json';
 import adminRoutes from './routes/adminRoutes';
 import messageRoutes from './routes/messageRoutes';
 import blogRoutes from './routes/blogRoutes';
+import { getAllComments } from './controllers/blogController';
+import { createMasterAdmin } from './controllers/adminController';
+import dotenv from 'dotenv';
+dotenv.config();
 
 const app = express();
 
 
-app.use(express.json());
+
 
 // Database connection
 mongoose.connect('mongodb://localhost:27017/My-Brand-Backend');
 
 const db = mongoose.connection;
-
+db.once('open', async () => { 
+  console.log('Connected to MongoDB');
+  await createMasterAdmin(); 
+});
 db.once('open', () => {
   console.log('Connected to MongoDB');
 });
+
 
 db.on('error', (err) => {
   console.error('MongoDB connection error:', err);
 });
 
-
 // Serve Swagger UI
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 
-
-// User routes
-app.use('/api/users', userRoutes);
+// Routes
+app.use('/api/user', userRoutes);
 app.use('/api/admin', adminRoutes);
 app.use('/api/message', messageRoutes);
-app.use(blogRoutes);
-
-
+app.use('/api/blog', blogRoutes);
+app.get('/api/comments', getAllComments);
 // Define route handler for the root URL
 app.get('/', (req, res) => {
   res.send('Welcome to my Brand Gabriel!');
